cloudformation-template.yaml
Parameters:
  LambdaCodeS3Bucket:
    Type: String
    Description: S3 bucket containing the Lambda code zip files
  LambdaCodeS3Key:
    Type: String
    Default: function.zip
    Description: S3 key for the main Lambda function zip
  AppID:
    Type: String
    Default: cli_xxxxxxxxxxxxxxxx
    Description: The AppID of larkbot app
    NoEcho: true
  AppSecret:
    Type: String
    Default: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
    Description: The Secret ID of larkbot app
    NoEcho: true
  CaseLanguage:
    Type: String
    Default: zh
    AllowedValues:
      - zh
      - ja
      - ko
      - en
    Description: Case Language queue. Should be in "zh", "ja", "ko", "en"
    NoEcho: false
  ConfigKey:
    Type: String
    Default: LarkBotProfile-0
    Description: The default config profile
    NoEcho: false
  UserWhitelist:
    Type: String
    Default: "false"
    AllowedValues:
      - "true"
      - "false"
    Description: Enable user white list function
    NoEcho: false
  SupportRegion:
    Type: String
    Default: en
    AllowedValues:
      - en
      - cn
    Description: The default support region
    NoEcho: false
  RefreshInterval:
    Type: Number
    Default: 10
    Description: Case refresh interval (in minutes)
    NoEcho: false
  LarkEndpoint:
    Type: String
    Default: lark
    AllowedValues:
      - lark
      - feishu
    Description: Lark endpoint
    NoEcho: false
  BootstrapVersion:
    Type: AWS::SSM::Parameter::Value<String>
    Default: /cdk-bootstrap/hnb659fds/version
    Description: Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]
Resources:
  AppIDSecretA765D2C7:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: The Secret to store the value of App ID
      SecretString:
        Ref: AppID
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/AppIDSecret/Resource
  AppSecretSecretF7CED462:
    Type: AWS::SecretsManager::Secret
    Properties:
      Description: The Secret to store the value of App Secret
      SecretString:
        Ref: AppSecret
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/AppSecretSecret/Resource
  auditA48D740E:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: key
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: key
          KeyType: HASH
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/audit/Resource
  botcasesE2E79E73:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: pk
          AttributeType: S
        - AttributeName: sk
          AttributeType: S
        - AttributeName: status
          AttributeType: S
        - AttributeName: type
          AttributeType: S
        - AttributeName: card_msg_id
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      GlobalSecondaryIndexes:
        - IndexName: status-type-index
          KeySchema:
            - AttributeName: status
              KeyType: HASH
            - AttributeName: type
              KeyType: RANGE
          Projection:
            ProjectionType: ALL
        - IndexName: card_msg_id-index
          KeySchema:
            - AttributeName: card_msg_id
              KeyType: HASH
          Projection:
            ProjectionType: ALL
      KeySchema:
        - AttributeName: pk
          KeyType: HASH
        - AttributeName: sk
          KeyType: RANGE
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/bot_cases/Resource
  botconfigCFB80AE2:
    Type: AWS::DynamoDB::Table
    Properties:
      AttributeDefinitions:
        - AttributeName: key
          AttributeType: S
      BillingMode: PAY_PER_REQUEST
      KeySchema:
        - AttributeName: key
          KeyType: HASH
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/bot_config/Resource
  InitBotConfig7E44F27E:
    Type: Custom::AWS
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - AWS679f53fac002430cb0da5b7982bd22872D164C4C
          - Arn
      Create:
        Fn::Join:
          - ""
          - - '{"service":"DynamoDB","action":"putItem","parameters":{"TableName":"'
            - Ref: botconfigCFB80AE2
            - '","Item":{"key":{"S":"'
            - Ref: ConfigKey
            - '"},"app_id_arn":{"S":"'
            - Ref: AppIDSecretA765D2C7
            - '"},"app_secret_arn":{"S":"'
            - Ref: AppSecretSecretF7CED462
            - '"},"ack":{"S":"Your message has been received"},"no_permission_msg":{"S":"你没有权限使用工单机器人，请联系管理员。"},"accounts":{"M":{"0":{"M":{"role_arn":{"S":"arn:aws:iam::626635424126:role/FeishuSupportCaseApiAll"}}}}},"service_map":{"M":{"0":{"L":[{"S":"general-info"},{"S":"using-aws"}]},"1":{"L":[{"S":"amazon-elastic-compute-cloud-linux"},{"S":"other"}]},"2":{"L":[{"S":"amazon-simple-storage-service"},{"S":"general-guidance"}]},"3":{"L":[{"S":"amazon-virtual-private-cloud"},{"S":"general-guidanc [...]
      InstallLatestAwsSdk: false
    DependsOn:
      - InitBotConfigCustomResourcePolicy2ACBF303
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/InitBotConfig/Resource/Default
  InitBotConfigCustomResourcePolicy2ACBF303:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: dynamodb:PutItem
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - botconfigCFB80AE2
                - Arn
        Version: "2012-10-17"
      PolicyName: InitBotConfigCustomResourcePolicy2ACBF303
      Roles:
        - Ref: AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/InitBotConfig/CustomResourcePolicy/Resource
  AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/AWS679f53fac002430cb0da5b7982bd2287/ServiceRole/Resource
  AWS679f53fac002430cb0da5b7982bd22872D164C4C:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: !Ref LambdaCodeS3Bucket
        S3Key: !Ref LambdaCodeS3Key
      Handler: index.handler
      Role:
        Fn::GetAtt:
          - AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2
          - Arn
      Runtime: nodejs20.x
      Timeout: 120
    DependsOn:
      - AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/AWS679f53fac002430cb0da5b7982bd2287/Resource
      aws:asset:path: asset.ce2f3595a340d6c519a65888ef97e3b9b64f053f83608e32cc28162e22d7d99a
      aws:asset:is-bundled: false
      aws:asset:property: Code
  LarkBotVpc81E2A1CE:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/Resource
  LarkBotVpcPublicSubnet1Subnet02BDEB94:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.0.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/Subnet
  LarkBotVpcPublicSubnet1RouteTableFF67EAAA:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/RouteTable
  LarkBotVpcPublicSubnet1RouteTableAssociationC72A4517:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: LarkBotVpcPublicSubnet1RouteTableFF67EAAA
      SubnetId:
        Ref: LarkBotVpcPublicSubnet1Subnet02BDEB94
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/RouteTableAssociation
  LarkBotVpcPublicSubnet1DefaultRouteFC689AD8:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: LarkBotVpcIGWA1EA9DFC
      RouteTableId:
        Ref: LarkBotVpcPublicSubnet1RouteTableFF67EAAA
    DependsOn:
      - LarkBotVpcVPCGW7F788278
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/DefaultRoute
  LarkBotVpcPublicSubnet1EIP7ADA0B29:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/EIP
  LarkBotVpcPublicSubnet1NATGatewayBDC5AF54:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - LarkBotVpcPublicSubnet1EIP7ADA0B29
          - AllocationId
      SubnetId:
        Ref: LarkBotVpcPublicSubnet1Subnet02BDEB94
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1
    DependsOn:
      - LarkBotVpcPublicSubnet1DefaultRouteFC689AD8
      - LarkBotVpcPublicSubnet1RouteTableAssociationC72A4517
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet1/NATGateway
  LarkBotVpcPublicSubnet2Subnet2FA2B7AF:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2/Subnet
  LarkBotVpcPublicSubnet2RouteTableCF77C47C:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2/RouteTable
  LarkBotVpcPublicSubnet2RouteTableAssociation9A15F3EC:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: LarkBotVpcPublicSubnet2RouteTableCF77C47C
      SubnetId:
        Ref: LarkBotVpcPublicSubnet2Subnet2FA2B7AF
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2/RouteTableAssociation
  LarkBotVpcPublicSubnet2DefaultRoute4A7C63E1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: LarkBotVpcIGWA1EA9DFC
      RouteTableId:
        Ref: LarkBotVpcPublicSubnet2RouteTableCF77C47C
    DependsOn:
      - LarkBotVpcVPCGW7F788278
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PublicSubnet2/DefaultRoute
  LarkBotVpcPrivateSubnet1SubnetD5CA73A4:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1a
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1/Subnet
  LarkBotVpcPrivateSubnet1RouteTable453922A0:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1/RouteTable
  LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: LarkBotVpcPrivateSubnet1RouteTable453922A0
      SubnetId:
        Ref: LarkBotVpcPrivateSubnet1SubnetD5CA73A4
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1/RouteTableAssociation
  LarkBotVpcPrivateSubnet1DefaultRoute95ADD975:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: LarkBotVpcPublicSubnet1NATGatewayBDC5AF54
      RouteTableId:
        Ref: LarkBotVpcPrivateSubnet1RouteTable453922A0
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet1/DefaultRoute
  LarkBotVpcPrivateSubnet2SubnetE970FE06:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: us-east-1b
      CidrBlock: 10.0.3.0/24
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: Private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2/Subnet
  LarkBotVpcPrivateSubnet2RouteTable1E773883:
    Type: AWS::EC2::RouteTable
    Properties:
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2/RouteTable
  LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: LarkBotVpcPrivateSubnet2RouteTable1E773883
      SubnetId:
        Ref: LarkBotVpcPrivateSubnet2SubnetE970FE06
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2/RouteTableAssociation
  LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: LarkBotVpcPublicSubnet1NATGatewayBDC5AF54
      RouteTableId:
        Ref: LarkBotVpcPrivateSubnet2RouteTable1E773883
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/PrivateSubnet2/DefaultRoute
  LarkBotVpcIGWA1EA9DFC:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/IGW
  LarkBotVpcVPCGW7F788278:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId:
        Ref: LarkBotVpcIGWA1EA9DFC
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/VPCGW
  LarkBotVpcRestrictDefaultSecurityGroupCustomResource3030A19A:
    Type: Custom::VpcRestrictDefaultSG
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E
          - Arn
      DefaultSecurityGroupId:
        Fn::GetAtt:
          - LarkBotVpc81E2A1CE
          - DefaultSecurityGroup
      Account: "626635424126"
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/RestrictDefaultSecurityGroupCustomResource/Default
  LarkBotVpcDynamoDBEndpoint204740E8:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      RouteTableIds:
        - Ref: LarkBotVpcPrivateSubnet1RouteTable453922A0
        - Ref: LarkBotVpcPrivateSubnet2RouteTable1E773883
        - Ref: LarkBotVpcPublicSubnet1RouteTableFF67EAAA
        - Ref: LarkBotVpcPublicSubnet2RouteTableCF77C47C
      ServiceName:
        Fn::Join:
          - ""
          - - com.amazonaws.
            - Ref: AWS::Region
            - .dynamodb
      VpcEndpointType: Gateway
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/DynamoDBEndpoint/Resource
  LarkBotVpcSecretsManagerEndpointSecurityGroupCDFFCA20:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: LarkAwsKnowledgeAssistantStack/LarkBotVpc/SecretsManagerEndpoint/SecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      SecurityGroupIngress:
        - CidrIp:
            Fn::GetAtt:
              - LarkBotVpc81E2A1CE
              - CidrBlock
          Description:
            Fn::Join:
              - ""
              - - "from "
                - Fn::GetAtt:
                    - LarkBotVpc81E2A1CE
                    - CidrBlock
                - :443
          FromPort: 443
          IpProtocol: tcp
          ToPort: 443
      Tags:
        - Key: Name
          Value: LarkAwsKnowledgeAssistantStack/LarkBotVpc
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/SecretsManagerEndpoint/SecurityGroup/Resource
  LarkBotVpcSecretsManagerEndpointAD039A82:
    Type: AWS::EC2::VPCEndpoint
    Properties:
      PrivateDnsEnabled: true
      SecurityGroupIds:
        - Fn::GetAtt:
            - LarkBotVpcSecretsManagerEndpointSecurityGroupCDFFCA20
            - GroupId
      ServiceName: com.amazonaws.us-east-1.secretsmanager
      SubnetIds:
        - Ref: LarkBotVpcPrivateSubnet1SubnetD5CA73A4
        - Ref: LarkBotVpcPrivateSubnet2SubnetE970FE06
      VpcEndpointType: Interface
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/LarkBotVpc/SecretsManagerEndpoint/Resource
  CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
      ManagedPolicyArns:
        - Fn::Sub: arn:${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
      Policies:
        - PolicyName: Inline
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - ec2:AuthorizeSecurityGroupIngress
                  - ec2:AuthorizeSecurityGroupEgress
                  - ec2:RevokeSecurityGroupIngress
                  - ec2:RevokeSecurityGroupEgress
                Resource:
                  - Fn::Join:
                      - ""
                      - - arn:aws:ec2:us-east-1:626635424126:security-group/
                        - Fn::GetAtt:
                            - LarkBotVpc81E2A1CE
                            - DefaultSecurityGroup
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Role
  CustomVpcRestrictDefaultSGCustomResourceProviderHandlerDC833E5E:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        S3Bucket: !Ref LambdaCodeS3Bucket
        S3Key: ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a.zip
      Timeout: 900
      MemorySize: 128
      Handler: __entrypoint__.handler
      Role:
        Fn::GetAtt:
          - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
          - Arn
      Runtime: nodejs20.x
      Description: Lambda function for removing all inbound/outbound rules from the VPC default security group
    DependsOn:
      - CustomVpcRestrictDefaultSGCustomResourceProviderRole26592FE0
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/Custom::VpcRestrictDefaultSGCustomResourceProvider/Handler
      aws:asset:path: asset.ee7de53d64cc9d6248fa6aa550f92358f6c907b5efd6f3298aeab1b5e7ea358a
      aws:asset:property: Code
  larkbotmsgeventServiceRoleC3080B6B:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: "2012-10-17"
      ManagedPolicyArns:
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        - Fn::Join:
            - ""
            - - "arn:"
              - Ref: AWS::Partition
              - :iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole
    DependsOn:
      - LarkBotVpcPrivateSubnet1DefaultRoute95ADD975
      - LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B
      - LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166
      - LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-msg-event/ServiceRole/Resource
  larkbotmsgeventServiceRoleDefaultPolicyF1F64F0F:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - secretsmanager:DescribeSecret
              - secretsmanager:GetSecretValue
            Effect: Allow
            Resource:
              - Ref: AppIDSecretA765D2C7
              - Ref: AppSecretSecretF7CED462
          - Action: sts:AssumeRole
            Effect: Allow
            Resource: arn:aws:iam::626635424126:role/FeishuSupportCaseApiAll
            Sid: AllowToAssumeToRoleWithSupportAPIAccess
          - Action:
              - dynamodb:BatchGetItem
              - dynamodb:BatchWriteItem
              - dynamodb:ConditionCheckItem
              - dynamodb:DeleteItem
              - dynamodb:DescribeTable
              - dynamodb:GetItem
              - dynamodb:GetRecords
              - dynamodb:GetShardIterator
              - dynamodb:PutItem
              - dynamodb:Query
              - dynamodb:Scan
              - dynamodb:UpdateItem
            Effect: Allow
            Resource:
              - Fn::GetAtt:
                  - auditA48D740E
                  - Arn
              - Fn::GetAtt:
                  - botcasesE2E79E73
                  - Arn
              - Fn::GetAtt:
                  - botconfigCFB80AE2
                  - Arn
              - Fn::Join:
                  - ""
                  - - Fn::GetAtt:
                        - botcasesE2E79E73
                        - Arn
                    - /index/*
              - Ref: AWS::NoValue
        Version: "2012-10-17"
      PolicyName: larkbotmsgeventServiceRoleDefaultPolicyF1F64F0F
      Roles:
        - Ref: larkbotmsgeventServiceRoleC3080B6B
    DependsOn:
      - LarkBotVpcPrivateSubnet1DefaultRoute95ADD975
      - LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B
      - LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166
      - LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-msg-event/ServiceRole/DefaultPolicy/Resource
  larkbotmsgeventSecurityGroupBFB1EDB9:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Automatic security group for Lambda Function LarkAwsKnowledgeAssistantStacklarkbotmsgeventED58FCAA
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: "-1"
      VpcId:
        Ref: LarkBotVpc81E2A1CE
    DependsOn:
      - LarkBotVpcPrivateSubnet1DefaultRoute95ADD975
      - LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B
      - LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166
      - LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-msg-event/SecurityGroup/Resource
  larkbotmsgevent5E908937:
    Type: AWS::Lambda::Function
    Properties:
      Architectures:
        - arm64
      Code:
        S3Bucket: !Ref LambdaCodeS3Bucket
        S3Key: 7226db6689eb46c0baef343692bd9b4ec9504b42beb2bce250efca1682cc967a.zip
      Environment:
        Variables:
          AUDIT_TABLE:
            Ref: auditA48D740E
          BOT_ENDPOINT:
            Ref: LarkEndpoint
          CASES_TABLE:
            Ref: botcasesE2E79E73
          CASE_LANGUAGE:
            Ref: CaseLanguage
          CFG_KEY:
            Ref: ConfigKey
          CFG_TABLE:
            Ref: botconfigCFB80AE2
          ENABLE_USER_WHITELIST:
            Ref: UserWhitelist
          SUPPORT_REGION:
            Ref: SupportRegion
      Handler: bootstrap
      Role:
        Fn::GetAtt:
          - larkbotmsgeventServiceRoleC3080B6B
          - Arn
      Runtime: provided.al2023
      Timeout: 60
      VpcConfig:
        SecurityGroupIds:
          - Fn::GetAtt:
              - larkbotmsgeventSecurityGroupBFB1EDB9
              - GroupId
        SubnetIds:
          - Ref: LarkBotVpcPrivateSubnet1SubnetD5CA73A4
          - Ref: LarkBotVpcPrivateSubnet2SubnetE970FE06
    DependsOn:
      - larkbotmsgeventServiceRoleDefaultPolicyF1F64F0F
      - larkbotmsgeventServiceRoleC3080B6B
      - LarkBotVpcPrivateSubnet1DefaultRoute95ADD975
      - LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B
      - LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166
      - LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-msg-event/Resource
      aws:asset:path: asset.7226db6689eb46c0baef343692bd9b4ec9504b42beb2bce250efca1682cc967a
      aws:asset:is-bundled: false
      aws:asset:property: Code
  larkbotmsgeventCurrentVersion6DC68621117b56943a0724dbff7dcdbd99566a48:
    Type: AWS::Lambda::Version
    Properties:
      FunctionName:
        Ref: larkbotmsgevent5E908937
    DependsOn:
      - LarkBotVpcPrivateSubnet1DefaultRoute95ADD975
      - LarkBotVpcPrivateSubnet1RouteTableAssociationBF13465B
      - LarkBotVpcPrivateSubnet2DefaultRouteBBDC3166
      - LarkBotVpcPrivateSubnet2RouteTableAssociation5D92481C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-msg-event/CurrentVersion/Resource
  msgeventprodF4DE037D:
    Type: AWS::Lambda::Alias
    Properties:
      FunctionName:
        Ref: larkbotmsgevent5E908937
      FunctionVersion:
        Fn::GetAtt:
          - larkbotmsgeventCurrentVersion6DC68621117b56943a0724dbff7dcdbd99566a48
          - Version
      Name: Prod
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msg-event-prod/Resource
  msgEventapiF8483781:
    Type: AWS::ApiGateway::RestApi
    Properties:
      EndpointConfiguration:
        Types:
          - EDGE
      Name: msgEventapi
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Resource
  msgEventapiDeployment4322C2D92a90ce0039745b6066ee72968608d930:
    Type: AWS::ApiGateway::Deployment
    Properties:
      Description: Automatically created by the RestApi construct
      RestApiId:
        Ref: msgEventapiF8483781
    DependsOn:
      - msgEventapimessagesPOST6551D7C4
      - msgEventapimessages018CD82E
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Deployment/Resource
  msgEventapiDeploymentStageprodCD57575F:
    Type: AWS::ApiGateway::Stage
    Properties:
      DeploymentId:
        Ref: msgEventapiDeployment4322C2D92a90ce0039745b6066ee72968608d930
      RestApiId:
        Ref: msgEventapiF8483781
      StageName: prod
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/DeploymentStage.prod/Resource
  msgEventapimessages018CD82E:
    Type: AWS::ApiGateway::Resource
    Properties:
      ParentId:
        Fn::GetAtt:
          - msgEventapiF8483781
          - RootResourceId
      PathPart: messages
      RestApiId:
        Ref: msgEventapiF8483781
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Default/messages/Resource
  msgEventapimessagesPOSTApiPermissionLarkAwsKnowledgeAssistantStackmsgEventapiE0C98FD7POSTmessages7D3CBC2B:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: msgeventprodF4DE037D
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:aws:execute-api:us-east-1:626635424126:"
            - Ref: msgEventapiF8483781
            - /
            - Ref: msgEventapiDeploymentStageprodCD57575F
            - /POST/messages
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Default/messages/POST/ApiPermission.LarkAwsKnowledgeAssistantStackmsgEventapiE0C98FD7.POST..messages
  msgEventapimessagesPOSTApiPermissionTestLarkAwsKnowledgeAssistantStackmsgEventapiE0C98FD7POSTmessages265D7D4D:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: msgeventprodF4DE037D
      Principal: apigateway.amazonaws.com
      SourceArn:
        Fn::Join:
          - ""
          - - "arn:aws:execute-api:us-east-1:626635424126:"
            - Ref: msgEventapiF8483781
            - /test-invoke-stage/POST/messages
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Default/messages/POST/ApiPermission.Test.LarkAwsKnowledgeAssistantStackmsgEventapiE0C98FD7.POST..messages
  msgEventapimessagesPOST6551D7C4:
    Type: AWS::ApiGateway::Method
    Properties:
      AuthorizationType: NONE
      HttpMethod: POST
      Integration:
        IntegrationHttpMethod: POST
        Type: AWS_PROXY
        Uri:
          Fn::Join:
            - ""
            - - arn:aws:apigateway:us-east-1:lambda:path/2015-03-31/functions/
              - Ref: msgeventprodF4DE037D
              - /invocations
      ResourceId:
        Ref: msgEventapimessages018CD82E
      RestApiId:
        Ref: msgEventapiF8483781
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/msgEventapi/Default/messages/POST/Resource
  larkbotcaseeventbusD9A0137D:
    Type: AWS::Events::EventBus
    Properties:
      Name: LarkAwsKnowledgeAssistantStacklarkbotcaseeventbus2992C460
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-case-event-bus/Resource
  larkbotcaseeventruleA044A204:
    Type: AWS::Events::Rule
    Properties:
      Description: Rule to trigger Lambda on case event
      EventBusName:
        Ref: larkbotcaseeventbusD9A0137D
      EventPattern:
        source:
          - aws.support
      State: ENABLED
      Targets:
        - Arn:
            Ref: msgeventprodF4DE037D
          Id: Target0
          Input: '{"schema":"2.0","event":{"message":{"message_type":"fresh_comment"}}}'
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-case-event-rule/Resource
  larkbotcaseeventruleAllowEventRuleLarkAwsKnowledgeAssistantStackmsgeventprodBFD9CBF72863E5F5:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: msgeventprodF4DE037D
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - larkbotcaseeventruleA044A204
          - Arn
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/larkbot-case-event-rule/AllowEventRuleLarkAwsKnowledgeAssistantStackmsgeventprodBFD9CBF7
  EventBusPolicy:
    Type: AWS::Events::EventBusPolicy
    Properties:
      EventBusName:
        Ref: larkbotcaseeventbusD9A0137D
      Statement:
        Effect: Allow
        Principal:
          AWS: arn:aws:iam::626635424126:root
        Action: events:PutEvents
        Resource:
          Fn::GetAtt:
            - larkbotcaseeventbusD9A0137D
            - Arn
      StatementId: AllowAccountsToPutEvents
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/EventBusPolicy
  EventBridgeForwardRole4D047B1C:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/EventBridgeForwardRole/Resource
  EventBridgeForwardRoleDefaultPolicy9144EE3D:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - larkbotcaseeventbusD9A0137D
                - Arn
        Version: "2012-10-17"
      PolicyName: EventBridgeForwardRoleDefaultPolicy9144EE3D
      Roles:
        - Ref: EventBridgeForwardRole4D047B1C
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/EventBridgeForwardRole/DefaultPolicy/Resource
  forwardSupportEvents701AE4F1:
    Type: AWS::Events::Rule
    Properties:
      Description: Forward AWS Support events to Lark bot event bus
      EventPattern:
        source:
          - aws.support
      State: ENABLED
      Targets:
        - Arn:
            Fn::GetAtt:
              - larkbotcaseeventbusD9A0137D
              - Arn
          Id: Target0
          RoleArn:
            Fn::GetAtt:
              - forwardSupportEventsEventsRoleB3F4885A
              - Arn
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/forwardSupportEvents/Resource
  forwardSupportEventsEventsRoleB3F4885A:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
        Version: "2012-10-17"
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/forwardSupportEvents/EventsRole/Resource
  forwardSupportEventsEventsRoleDefaultPolicy610B2D30:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: events:PutEvents
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - larkbotcaseeventbusD9A0137D
                - Arn
        Version: "2012-10-17"
      PolicyName: forwardSupportEventsEventsRoleDefaultPolicy610B2D30
      Roles:
        - Ref: forwardSupportEventsEventsRoleB3F4885A
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/forwardSupportEvents/EventsRole/DefaultPolicy/Resource
  CrossRegionForwardRoleDBB16F41:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: events.amazonaws.com
        Version: "2012-10-17"
      Policies:
        - PolicyDocument:
            Statement:
              - Action: events:PutEvents
                Effect: Allow
                Resource:
                  Fn::GetAtt:
                    - larkbotcaseeventbusD9A0137D
                    - Arn
            Version: "2012-10-17"
          PolicyName: PutEvents
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/CrossRegionForwardRole/Resource
  CrossRegionForwardRuleF6F4F8F5:
    Type: Custom::AWS
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - AWS679f53fac002430cb0da5b7982bd22872D164C4C
          - Arn
      Create: '{"service":"EventBridge","action":"putRule","parameters":{"Name":"forward-support-to-us-east-1","EventPattern":"{\"source\":[\"aws.support\"]}","Description":"Forward AWS Support events to us-east-1 Lark bot","State":"ENABLED"},"region":"us-east-1","physicalResourceId":{"id":"forward-support-to-us-east-1"}}'
      Delete: '{"service":"EventBridge","action":"removeTargets","parameters":{"Rule":"forward-support-to-us-east-1","Ids":["larkbot-cross-region"]},"region":"us-east-1"}'
      InstallLatestAwsSdk: false
    DependsOn:
      - CrossRegionForwardRuleCustomResourcePolicyB553B325
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/CrossRegionForwardRule/Resource/Default
  CrossRegionForwardRuleCustomResourcePolicyB553B325:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action:
              - events:DeleteRule
              - events:PutRule
              - events:PutTargets
              - events:RemoveTargets
            Effect: Allow
            Resource: arn:aws:events:us-east-1:626635424126:rule/forward-support-to-us-east-1
        Version: "2012-10-17"
      PolicyName: CrossRegionForwardRuleCustomResourcePolicyB553B325
      Roles:
        - Ref: AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/CrossRegionForwardRule/CustomResourcePolicy/Resource
  CrossRegionForwardTarget5D0B2C6D:
    Type: Custom::AWS
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - AWS679f53fac002430cb0da5b7982bd22872D164C4C
          - Arn
      Create:
        Fn::Join:
          - ""
          - - '{"service":"EventBridge","action":"putTargets","parameters":{"Rule":"forward-support-to-us-east-1","Targets":[{"Id":"larkbot-cross-region","Arn":"'
            - Fn::GetAtt:
                - larkbotcaseeventbusD9A0137D
                - Arn
            - '","RoleArn":"'
            - Fn::GetAtt:
                - CrossRegionForwardRoleDBB16F41
                - Arn
            - '"}]},"region":"us-east-1","physicalResourceId":{"id":"forward-support-to-us-east-1-target"}}'
      InstallLatestAwsSdk: false
    DependsOn:
      - CrossRegionForwardTargetCustomResourcePolicyF1CC6E02
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/CrossRegionForwardTarget/Resource/Default
  CrossRegionForwardTargetCustomResourcePolicyF1CC6E02:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        Statement:
          - Action: events:PutTargets
            Effect: Allow
            Resource: arn:aws:events:us-east-1:626635424126:rule/forward-support-to-us-east-1
          - Action: iam:PassRole
            Effect: Allow
            Resource:
              Fn::GetAtt:
                - CrossRegionForwardRoleDBB16F41
                - Arn
        Version: "2012-10-17"
      PolicyName: CrossRegionForwardTargetCustomResourcePolicyF1CC6E02
      Roles:
        - Ref: AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/CrossRegionForwardTarget/CustomResourcePolicy/Resource
  refreshCaseRuleD80F6A59:
    Type: AWS::Events::Rule
    Properties:
      Description:
        Fn::Join:
          - ""
          - - "Refresh case update every "
            - Ref: RefreshInterval
            - " minutes"
      ScheduleExpression:
        Fn::Join:
          - ""
          - - rate(
            - Ref: RefreshInterval
            - " minutes)"
      State: ENABLED
      Targets:
        - Arn:
            Ref: msgeventprodF4DE037D
          Id: Target0
          Input: '{"schema":"2.0","event":{"message":{"message_type":"fresh_comment"}}}'
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/refreshCaseRule/Resource
  refreshCaseRuleAllowEventRuleLarkAwsKnowledgeAssistantStackmsgeventprodBFD9CBF7DEC05C81:
    Type: AWS::Lambda::Permission
    Properties:
      Action: lambda:InvokeFunction
      FunctionName:
        Ref: msgeventprodF4DE037D
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - refreshCaseRuleD80F6A59
          - Arn
    Metadata:
      aws:cdk:path: LarkAwsKnowledgeAssistantStack/refreshCaseRule/AllowEventRuleLarkAwsKnowledgeAssistantStackmsgeventprodBFD9CBF7

  NatGatewayEIP:
    Description: Fixed outbound IP (NAT Gateway Elastic IP)
    Value:
      Ref: LarkBotVpcPublicSubnet1EIP7ADA0B29
  msgEventapiEndpointAC31EC6D:
    Value:
      Fn::Join:
        - ""
        - - https://
          - Ref: msgEventapiF8483781
          - .execute-api.us-east-1.
          - Ref: AWS::URLSuffix
          - /
          - Ref: msgEventapiDeploymentStageprodCD57575F
          - /
  msgEventRoleArn:
    Description: The arn of msgEventfunction
    Value:
      Fn::GetAtt:
        - larkbotmsgeventServiceRoleC3080B6B
        - Arn
  larkbotCaseEventBusArn:
    Description: The arn of larkbotCaseEventBus
    Value:
      Fn::GetAtt:
        - larkbotcaseeventbusD9A0137D
        - Arn
